ecmascript/parser/tests/test262-error-references/fail/7562c2148b3f455c.js.stderr
error: Unexpected token `<eof>`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/7562c2148b3f455c.js:1:8
  |
1 | ;/**/-->
  |        ^

error: Expression expected
 --> $DIR/tests/test262-parser/fail/7562c2148b3f455c.js:1:8
  |
1 | ;/**/-->
  |        ^

